Opened 15 years ago
Closed 15 years ago
#753 closed defect (fixed)
Signal 11 when reading zzufed 4xm file
| Reported by: | Diana Muscalu | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | 4xm |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
error in libavcodec/get_bits.h:260
Attachments (5)
Change History (6)
by , 15 years ago
| Attachment: | corruptfile added |
|---|
comment:1 by , 15 years ago
| Component: | FFmpeg → avcodec |
|---|---|
| Keywords: | 4xm added |
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
locally fixed, will be in git master soon
Note:
See TracTickets
for help on using tickets.



use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )